Initial commit for version delete action with basic functionality

--- a/ev-versiondelete-share/src/main/amp/config/alfresco/web-extension/messages/ev-versiondelete-share.properties
+++ b/ev-versiondelete-share/src/main/amp/config/alfresco/web-extension/messages/ev-versiondelete-share.properties
@@ -17,3 +17,10 @@ alfresco.tutorials.doclib.action.sendAsEmail.form.field.body_text=Body Text
 alfresco.tutorials.doclib.action.callWebScript.label=Call Web Script
 alfresco.tutorials.doclib.action.callWebScript.msg.success=Successfully called Web Script
 alfresco.tutorials.doclib.action.callWebScript.msg.failure=Failed to invoke Web Script
+
+
+eisenvault.action.versionDelete.label=Version Delete
+eisenvault.action.versionDelete.msg.success=Version deleted successfully
+eisenvault.action.versionDelete.msg.failure=Failed to delete version
+
+eisenvault.action.versionDelete.form.field.version=Version
